--- a/SR.ipynb
+++ b/SR.ipynb
@@ -416,7 +416,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Calculo de PSNR para utilizar de metrica para validar resultados:\n",
+    "Se crea un dataframe para una mejor visualizacion de estos calculos y poder trabajarlos mas a futuro."
+   ]
   },
   {
    "cell_type": "code",
@@ -695,6 +698,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PSNR Promedio segun resultados por escala:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -716,6 +726,13 @@
     "result_df = df_avg.groupby('Scale')['PSNR'].mean().reset_index()\n",
     "\n",
     "print(result_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Herramienta de pixelmatch de js: implementacion no fue lograda y se opto por PSNR, pero se podria volver a intentar adaptar para obtener mas metricas para la validación."
    ]
   },
   {
